# Modemation

./: .gitignore  Mesh.stl  README.md  RigInfo.json  TestingScripting.py
Human3D/: .gitignore  CMakeLists.txt  Readme.md
Human3D/apps/: buildShapeModel.cpp  fitting.cpp
Human3D/data/: inputParams.json  landmarks_v1.json
Human3D/data/smpl/: ids_index_smpl.json  landmarks_smpl.json
Human3D/include/: Alignment.h  BodyParameters.h  BuildSSM.h  DeformationField.h  GaussianPrior.h  GaussianProportionEvaluator.h  GaussianProposal.h  Mesh.h  MetropolisHastings.h  Model.h  ObjLoader.h  PCA.h  Point.h  ProposalDistribution.h  TriangleCell.h
Human3D/models/: Readme.md
Human3D/src/: Alignment.cpp  BuildSSM.cpp  GaussianPrior.cpp  GaussianProportionEvaluator.cpp  GaussianProposal.cpp  Mesh.cpp  MetropolisHastings.cpp  Model.cpp  ObjLoader.cpp  PCA.cpp  Point.cpp
Human3D/tests/: CMakeLists.txt  buildSSMSmpl_test.cpp  buildSSMSmplx_test.cpp  buildSSM_test.cpp  hdf5C_test.cpp  hdf5Read_test.cpp  hdf5_test.cpp  ids_index.json  ids_index_v2.json  landmarksSmpl_test.cpp  landmarks_test.cpp  matrix_test.cpp  mesh_test.cpp  metropolis_test.cpp  model2_test.cpp  model_test.cpp  objloader_test.cpp  point_test.cpp  proposals_test.cpp  readPCAModelSmpl_test.cpp  readPCAModel_test.cpp  readPCASmplx_test.cpp  strings_test.cpp
Playground/Character segmentation/: .gitignore  nb-1.ipynb
Playground/model animation/: Playground.ipynb
Rigging and Animation/: .gitignore  IK.py  Readme.md  Repainting.py  TestingScripting.py  commonfunctions.py  get_frames.py  get_pose.bat  get_pose.sh  humanPose.json  landmarks_v1.json  meshTestSampledLandmarks.json  prepocessing.bat  untitled.blend  untitled.blend1
Rigging and Animation/preprocessing/: clear_dir.py  crop_image.py  crop_image_1.py  crop_image_2.py  get_frames.py  get_image.py  get_proportions.py  human_seg.py
RiggingAndAnimation/: .gitignore  CommonFunctions.py  PaintAndCorrectTexture.py  Readme.md  TestingScripting.py  TestingScripting_bg.py  animate.blend  background_script.py  get_pose.bat  human_keypoints.json  initialModelPose.json  prepocessing.bat
RiggingAndAnimation/model/: initialModelPose.json  rigInfo.json
RiggingAndAnimation/model/old/: finalLms7.json
RiggingAndAnimation/model_output/: rigInfo.json
RiggingAndAnimation/preprocessing/: get_frames.py  get_image.py  prepocessing.bat  run_blender.py
UI/: GP.csproj  GP.sln  Game1.cs  Importer.cs  Program.cs  app.manifest
UI/Content/: imgui.ini
UI/Content/Scenes/: DefaultScene.scene  DefaultScene_Editor.scene
